export interface Laboratory {
  id: number;
  course_id: number;
  lab_number: number;
  topic: string;
  created_at?: string;
  updated_at?: string;
}

